--- a/notebooks/02_clean_data.ipynb
+++ b/notebooks/02_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "6c247a80",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "67d88644",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "ccd86d1c",
    "metadata": {},
    "outputs": [],
@@ -51,8 +51,8 @@
     "\n",
     "    df_logs['timestamp'] = pd.to_datetime(df_logs['timestamp'], format='%d/%b/%Y:%H:%M:%S', errors='coerce')\n",
     "    \n",
-    "    # Xử lý cột bytes (fillna 0 và ép kiểu số)\n",
-    "    df_logs['bytes'] = pd.to_numeric(df_logs['bytes'], errors='coerce').fillna(0)\n",
+    "    # Xử lý cột bytes (fillna -1 và ép kiểu số)\n",
+    "    df_logs['bytes'] = pd.to_numeric(df_logs['bytes'], errors='coerce').fillna(-1)\n",
     "    \n",
     "    # Ép kiểu theo dictionary bạn đã định nghĩa\n",
     "    df_logs = df_logs.astype(dtype_cols_raw_log)\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "41a14936",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "bb63f9b8",
    "metadata": {},
    "outputs": [
@@ -91,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đã xử lý xong: ../data/temp_extracted\\train.csv | Số dòng: 2934930\n",
-      "Đã xử lý xong: ../data/temp_extracted\\test.csv | Số dòng: 526644\n"
+      "Đã xử lý xong: ../data/temp_extracted/train.csv | Số dòng: 2934930\n",
+      "Đã xử lý xong: ../data/temp_extracted/test.csv | Số dòng: 526644\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "ee9391b6",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "4  GET /shuttle/missions/sts-73/sts-73-patch-smal...      200   4179  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "ecc6a801",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404      0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "00e08eec",
    "metadata": {},
    "outputs": [],
@@ -325,12 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c773848c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with zipfile._cleanedZipFile(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\", \"w\", zipfile.ZIP_DEFLATED) as z:\n",
+    "with zipfile.ZipFile(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\", \"w\", zipfile.ZIP_DEFLATED) as z:\n",
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/train.csv\", arcname=\"train.csv\")\n",
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/test.csv\", arcname=\"test.csv\")"
    ]
@@ -338,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
