--- a/notebooks/02_clean_data.ipynb
+++ b/notebooks/02_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c247a80",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "67d88644",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ccd86d1c",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "41a14936",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "bb63f9b8",
    "metadata": {},
    "outputs": [
@@ -91,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đã xử lý xong: ../data/temp_extracted/train.csv | Số dòng: 2934930\n",
-      "Đã xử lý xong: ../data/temp_extracted/test.csv | Số dòng: 526644\n"
+      "Đã xử lý xong: ../data/temp_extracted\\train.csv | Số dòng: 2934930\n",
+      "Đã xử lý xong: ../data/temp_extracted\\test.csv | Số dòng: 526644\n"
      ]
     }
    ],
@@ -106,7 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
+   "id": "ddc26666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_train.reset_index()\n",
+    "df_test = df_test.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "ee9391b6",
    "metadata": {},
    "outputs": [
@@ -131,6 +142,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>host</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>request</th>\n",
@@ -141,6 +153,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>199.72.81.55</td>\n",
        "      <td>1995-07-01 00:00:01</td>\n",
        "      <td>GET /history/apollo/ HTTP/1.0</td>\n",
@@ -149,6 +162,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>unicomp6.unicomp.net</td>\n",
        "      <td>1995-07-01 00:00:06</td>\n",
        "      <td>GET /shuttle/countdown/ HTTP/1.0</td>\n",
@@ -157,6 +171,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>199.120.110.21</td>\n",
        "      <td>1995-07-01 00:00:09</td>\n",
        "      <td>GET /shuttle/missions/sts-73/mission-sts-73.ht...</td>\n",
@@ -165,6 +180,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>burger.letters.com</td>\n",
        "      <td>1995-07-01 00:00:11</td>\n",
        "      <td>GET /shuttle/countdown/liftoff.html HTTP/1.0</td>\n",
@@ -173,44 +189,114 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>199.120.110.21</td>\n",
        "      <td>1995-07-01 00:00:11</td>\n",
        "      <td>GET /shuttle/missions/sts-73/sts-73-patch-smal...</td>\n",
        "      <td>200</td>\n",
        "      <td>4179</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934925</th>\n",
+       "      <td>2934925</td>\n",
+       "      <td>sfsp129.slip.net</td>\n",
+       "      <td>1995-08-22 23:59:55</td>\n",
+       "      <td>GET /images/ksclogo-medium.gif HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>5866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934926</th>\n",
+       "      <td>2934926</td>\n",
+       "      <td>sfsp129.slip.net</td>\n",
+       "      <td>1995-08-22 23:59:57</td>\n",
+       "      <td>GET /images/NASA-logosmall.gif HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934927</th>\n",
+       "      <td>2934927</td>\n",
+       "      <td>sfsp129.slip.net</td>\n",
+       "      <td>1995-08-22 23:59:57</td>\n",
+       "      <td>GET /images/MOSAIC-logosmall.gif HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934928</th>\n",
+       "      <td>2934928</td>\n",
+       "      <td>sfsp129.slip.net</td>\n",
+       "      <td>1995-08-22 23:59:58</td>\n",
+       "      <td>GET /images/USA-logosmall.gif HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934929</th>\n",
+       "      <td>2934929</td>\n",
+       "      <td>sfsp129.slip.net</td>\n",
+       "      <td>1995-08-22 23:59:59</td>\n",
+       "      <td>GET /images/WORLD-logosmall.gif HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>669</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2934930 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   host           timestamp  \\\n",
-       "0          199.72.81.55 1995-07-01 00:00:01   \n",
-       "1  unicomp6.unicomp.net 1995-07-01 00:00:06   \n",
-       "2        199.120.110.21 1995-07-01 00:00:09   \n",
-       "3    burger.letters.com 1995-07-01 00:00:11   \n",
-       "4        199.120.110.21 1995-07-01 00:00:11   \n",
+       "           index                  host           timestamp  \\\n",
+       "0              0          199.72.81.55 1995-07-01 00:00:01   \n",
+       "1              1  unicomp6.unicomp.net 1995-07-01 00:00:06   \n",
+       "2              2        199.120.110.21 1995-07-01 00:00:09   \n",
+       "3              3    burger.letters.com 1995-07-01 00:00:11   \n",
+       "4              4        199.120.110.21 1995-07-01 00:00:11   \n",
+       "...          ...                   ...                 ...   \n",
+       "2934925  2934925      sfsp129.slip.net 1995-08-22 23:59:55   \n",
+       "2934926  2934926      sfsp129.slip.net 1995-08-22 23:59:57   \n",
+       "2934927  2934927      sfsp129.slip.net 1995-08-22 23:59:57   \n",
+       "2934928  2934928      sfsp129.slip.net 1995-08-22 23:59:58   \n",
+       "2934929  2934929      sfsp129.slip.net 1995-08-22 23:59:59   \n",
        "\n",
-       "                                             request response  bytes  \n",
-       "0                      GET /history/apollo/ HTTP/1.0      200   6245  \n",
-       "1                   GET /shuttle/countdown/ HTTP/1.0      200   3985  \n",
-       "2  GET /shuttle/missions/sts-73/mission-sts-73.ht...      200   4085  \n",
-       "3       GET /shuttle/countdown/liftoff.html HTTP/1.0      304      0  \n",
-       "4  GET /shuttle/missions/sts-73/sts-73-patch-smal...      200   4179  "
+       "                                                   request response  bytes  \n",
+       "0                            GET /history/apollo/ HTTP/1.0      200   6245  \n",
+       "1                         GET /shuttle/countdown/ HTTP/1.0      200   3985  \n",
+       "2        GET /shuttle/missions/sts-73/mission-sts-73.ht...      200   4085  \n",
+       "3             GET /shuttle/countdown/liftoff.html HTTP/1.0      304      0  \n",
+       "4        GET /shuttle/missions/sts-73/sts-73-patch-smal...      200   4179  \n",
+       "...                                                    ...      ...    ...  \n",
+       "2934925            GET /images/ksclogo-medium.gif HTTP/1.0      200   5866  \n",
+       "2934926            GET /images/NASA-logosmall.gif HTTP/1.0      200    786  \n",
+       "2934927          GET /images/MOSAIC-logosmall.gif HTTP/1.0      200    363  \n",
+       "2934928             GET /images/USA-logosmall.gif HTTP/1.0      200    234  \n",
+       "2934929           GET /images/WORLD-logosmall.gif HTTP/1.0      200    669  \n",
+       "\n",
+       "[2934930 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.head()"
+    "df_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "ecc6a801",
    "metadata": {},
    "outputs": [
@@ -235,6 +321,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>host</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>request</th>\n",
@@ -245,6 +332,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>ix-mia1-02.ix.netcom.com</td>\n",
        "      <td>1995-08-23 00:00:00</td>\n",
        "      <td>GET /ksc.html HTTP/1.0</td>\n",
@@ -253,6 +341,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>internet-gw.watson.ibm.com</td>\n",
        "      <td>1995-08-23 00:00:05</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
@@ -261,6 +350,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>ix-mia1-02.ix.netcom.com</td>\n",
        "      <td>1995-08-23 00:00:06</td>\n",
        "      <td>GET /images/ksclogo-medium.gif HTTP/1.0</td>\n",
@@ -269,6 +359,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>internet-gw.watson.ibm.com</td>\n",
        "      <td>1995-08-23 00:00:08</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
@@ -277,6 +368,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>internet-gw.watson.ibm.com</td>\n",
        "      <td>1995-08-23 00:00:10</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
@@ -288,12 +380,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                         host           timestamp  \\\n",
-       "0    ix-mia1-02.ix.netcom.com 1995-08-23 00:00:00   \n",
-       "1  internet-gw.watson.ibm.com 1995-08-23 00:00:05   \n",
-       "2    ix-mia1-02.ix.netcom.com 1995-08-23 00:00:06   \n",
-       "3  internet-gw.watson.ibm.com 1995-08-23 00:00:08   \n",
-       "4  internet-gw.watson.ibm.com 1995-08-23 00:00:10   \n",
+       "   index                        host           timestamp  \\\n",
+       "0      0    ix-mia1-02.ix.netcom.com 1995-08-23 00:00:00   \n",
+       "1      1  internet-gw.watson.ibm.com 1995-08-23 00:00:05   \n",
+       "2      2    ix-mia1-02.ix.netcom.com 1995-08-23 00:00:06   \n",
+       "3      3  internet-gw.watson.ibm.com 1995-08-23 00:00:08   \n",
+       "4      4  internet-gw.watson.ibm.com 1995-08-23 00:00:10   \n",
        "\n",
        "                                             request response  bytes  \n",
        "0                             GET /ksc.html HTTP/1.0      200   7087  \n",
@@ -303,7 +395,7 @@
        "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404      0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "00e08eec",
    "metadata": {},
    "outputs": [],
@@ -325,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "c773848c",
    "metadata": {},
    "outputs": [],
@@ -334,11 +426,19 @@
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/train.csv\", arcname=\"train.csv\")\n",
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/test.csv\", arcname=\"test.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd7a51e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
