--- a/notebooks/03_host.ipynb
+++ b/notebooks/03_host.ipynb
@@ -5,7 +5,7 @@
    "id": "e4428fcd",
    "metadata": {},
    "source": [
-    "# Host"
+    "## Host"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "63663180",
    "metadata": {},
    "outputs": [],
