--- a/notebooks/07_bytes.ipynb
+++ b/notebooks/07_bytes.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "faf87cd6",
    "metadata": {},
    "outputs": [],
@@ -79,6 +79,14 @@
     "            'mode': df_subset[col].mode()[0] if not df_subset[col].mode().empty else 0,\n",
     "            'max': df_subset[col].max()\n",
     "        }\n",
+    "\n",
+    "    def categorize_bytes(self, df, col='bytes'):\n",
+    "        \"\"\"Phân loại dữ liệu dựa trên ngưỡng đã tính\"\"\"\n",
+    "        if self.fence_high is None:\n",
+    "            self.calculate_outlier_threshold(df, col)\n",
+    "            \n",
+    "        df['bytesaction'] = np.where(df[col] <= self.fence_high, 'normal', 'for observation')\n",
+    "        return df\n",
     "\n",
     "    def plot_normal_distribution(self, df, title_prefix=\"Data\", col='bytes'):\n",
     "        \"\"\"BIỂU ĐỒ 1: Phân phối dữ liệu bình thường (Boxplot + Histplot)\"\"\"\n",
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "734a1fc0",
    "metadata": {},
    "outputs": [
@@ -191,16 +199,123 @@
      "output_type": "display_data"
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'BytesAnalyzer' object has no attribute 'categorize_bytes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df_train_bytes = \u001b[43manalyze_bytes_workflow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTrain\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m df_train_bytes\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36manalyze_bytes_workflow\u001b[39m\u001b[34m(df, name)\u001b[39m\n\u001b[32m      8\u001b[39m analyzer.plot_normal_distribution(df_bytes, title_prefix=name)\n\u001b[32m      9\u001b[39m analyzer.plot_outliers_scatter(df_bytes, title_prefix=name)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m df_final = \u001b[43manalyzer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcategorize_bytes\u001b[49m(df_bytes)\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m df_final\n",
-      "\u001b[31mAttributeError\u001b[39m: 'BytesAnalyzer' object has no attribute 'categorize_bytes'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>bytes</th>\n",
+       "      <th>bytesaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6.245</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.985</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.085</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.179</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934925</th>\n",
+       "      <td>2934925</td>\n",
+       "      <td>5.866</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934926</th>\n",
+       "      <td>2934926</td>\n",
+       "      <td>0.786</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934927</th>\n",
+       "      <td>2934927</td>\n",
+       "      <td>0.363</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934928</th>\n",
+       "      <td>2934928</td>\n",
+       "      <td>0.234</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2934929</th>\n",
+       "      <td>2934929</td>\n",
+       "      <td>0.669</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2934930 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           index  bytes bytesaction\n",
+       "0              0  6.245      normal\n",
+       "1              1  3.985      normal\n",
+       "2              2  4.085      normal\n",
+       "3              3  0.000      normal\n",
+       "4              4  4.179      normal\n",
+       "...          ...    ...         ...\n",
+       "2934925  2934925  5.866      normal\n",
+       "2934926  2934926  0.786      normal\n",
+       "2934927  2934927  0.363      normal\n",
+       "2934928  2934928  0.234      normal\n",
+       "2934929  2934929  0.669      normal\n",
+       "\n",
+       "[2934930 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
