--- a/notebooks/03_host.ipynb
+++ b/notebooks/03_host.ipynb
@@ -300,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "cf5e63a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_visitor(df, name, analyzer):\n",
-    "    print(\"Processing Train data...\")\n",
+    "    print(f\"Processing {name} data...\")\n",
     "    df_visitors = analyzer.process_dataframe(df)\n",
     "    analyzer.plot_categories(df_visitors, title=f\"Visitor Types - {name} Set\")\n",
     "    return df_visitors"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "c13964ea",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Train data...\n"
+      "Processing Test data...\n"
      ]
     },
     {
