--- a/notebooks/06_response.ipynb
+++ b/notebooks/06_response.ipynb
@@ -513,6 +513,25 @@
    "source": [
     "train_response.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "820d2f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_final= train_response[['index', 'response', 'response_class']].copy()\n",
+    "test_final= test_response[['index', 'response', 'response_class']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6e5320",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
