add: parquet 06 , fix: 03

--- a/notebooks/06_response.ipynb
+++ b/notebooks/06_response.ipynb
@@ -527,11 +527,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "ad6e5320",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_final.to_parquet(\n",
+    "    \"../features/06_response_train.parquet\",\n",
+    "    engine=\"fastparquet\",  \n",
+    "    index=True\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
