--- a/notebooks/eda_each_columns/04_timestamp.ipynb
+++ b/notebooks/eda_each_columns/04_timestamp.ipynb
@@ -2,112 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "trusted": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>host</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>request</th>\n",
-       "      <th>response</th>\n",
-       "      <th>bytes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1891693</th>\n",
-       "      <td>1891693</td>\n",
-       "      <td>163.205.53.14</td>\n",
-       "      <td>1995-07-28 13:32:22</td>\n",
-       "      <td>GET /shuttle/technology/images/srb_mod_compare...</td>\n",
-       "      <td>200</td>\n",
-       "      <td>28219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891694</th>\n",
-       "      <td>1891694</td>\n",
-       "      <td>163.205.53.14</td>\n",
-       "      <td>1995-07-28 13:32:23</td>\n",
-       "      <td>GET /images/KSC-logosmall.gif HTTP/1.0</td>\n",
-       "      <td>200</td>\n",
-       "      <td>1204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891695</th>\n",
-       "      <td>1891695</td>\n",
-       "      <td>tiger2.ocs.lsu.edu</td>\n",
-       "      <td>1995-07-28 13:32:23</td>\n",
-       "      <td>GET /shuttle/missions/missions.html HTTP/1.0</td>\n",
-       "      <td>200</td>\n",
-       "      <td>8677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891696</th>\n",
-       "      <td>1891696</td>\n",
-       "      <td>199.0.2.27</td>\n",
-       "      <td>1995-07-28 13:32:23</td>\n",
-       "      <td>GET /images/ksclogo-medium.gif HTTP/1.0</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5866</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891697</th>\n",
-       "      <td>1891697</td>\n",
-       "      <td>tornado.umd.edu</td>\n",
-       "      <td>1995-07-28 13:32:25</td>\n",
-       "      <td>GET /shuttle/missions/sts-74/sts-74-patch-smal...</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5494</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           index                host            timestamp  \\\n",
-       "1891693  1891693       163.205.53.14  1995-07-28 13:32:22   \n",
-       "1891694  1891694       163.205.53.14  1995-07-28 13:32:23   \n",
-       "1891695  1891695  tiger2.ocs.lsu.edu  1995-07-28 13:32:23   \n",
-       "1891696  1891696          199.0.2.27  1995-07-28 13:32:23   \n",
-       "1891697  1891697     tornado.umd.edu  1995-07-28 13:32:25   \n",
-       "\n",
-       "                                                   request  response  bytes  \n",
-       "1891693  GET /shuttle/technology/images/srb_mod_compare...       200  28219  \n",
-       "1891694             GET /images/KSC-logosmall.gif HTTP/1.0       200   1204  \n",
-       "1891695       GET /shuttle/missions/missions.html HTTP/1.0       200   8677  \n",
-       "1891696            GET /images/ksclogo-medium.gif HTTP/1.0       200   5866  \n",
-       "1891697  GET /shuttle/missions/sts-74/sts-74-patch-smal...       200   5494  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import zipfile\n",
     "import numpy as np \n",
@@ -115,7 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "zip_path=\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\"\n",
+    "zip_path=\"../../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\"\n",
     "def read_file(zip_path,filename):\n",
     "    with zipfile.ZipFile(zip_path,\"r\") as z :\n",
     "        with z.open(filename,'r') as f :\n",
@@ -125,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-22T09:05:42.261788Z",
@@ -143,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-22T07:14:51.605604Z",
@@ -219,7 +120,7 @@
        "4      4  1995-07-01 00:00:11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +145,7 @@
        "Name: timestamp, dtype: str"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-22T08:53:53.812234Z",
@@ -294,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +292,7 @@
        "2934929  2934929 1995-08-22 23:59:59    23   22        1      8           0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-22T09:06:10.260684Z",
@@ -661,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -806,12 +707,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_time.to_parquet(\n",
-    "    \"../features/04_timestamp_train.parquet\",\n",
+    "    \"../../features/04_timestamp_train.parquet\",\n",
     "    engine=\"fastparquet\",  \n",
     "    index=False\n",
     ")"
