--- a/notebooks/eda_each_columns/05_request.ipynb
+++ b/notebooks/eda_each_columns/05_request.ipynb
@@ -46,7 +46,7 @@
    ],
    "source": [
     "# Lấy data từ file zip\n",
-    "zip_path = '../data/cleaned/data_cleaned.zip'\n",
+    "zip_path = '../../data/cleaned/data_cleaned.zip'\n",
     "\n",
     "with zipfile.ZipFile(zip_path, 'r') as z:\n",
     "    print(\"Danh sách file:\", z.namelist())\n",
@@ -531,7 +531,7 @@
    ],
    "source": [
     "# Lưu các cột quan trọng thành file parquet\n",
-    "df_train_final.to_parquet('../features/05_request_features_train.parquet', index=False)\n",
+    "df_train_final.to_parquet('../../features/05_request_features_train.parquet', index=False)\n",
     "print(\"Lưu file parquet xong cho Train\")"
    ]
   },
@@ -634,7 +634,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_48690/2150951299.py:12: FutureWarning: \n",
+      "/tmp/ipykernel_65233/2150951299.py:12: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -696,7 +696,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_48690/190868758.py:8: FutureWarning: \n",
+      "/tmp/ipykernel_65233/190868758.py:8: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
