--- a/notebooks/eda_each_columns/06_response.ipynb
+++ b/notebooks/eda_each_columns/06_response.ipynb
@@ -29,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "zip_path=\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\"\n",
+    "zip_path=\"../../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/cleaned/data_cleaned.zip\"\n",
     "def read_file(zip_path,filename):\n",
     "    with zipfile.ZipFile(zip_path,\"r\") as z :\n",
     "        with z.open(filename,'r') as f :\n",
@@ -533,7 +533,7 @@
    "outputs": [],
    "source": [
     "train_final.to_parquet(\n",
-    "    \"../features/06_response_train.parquet\",\n",
+    "    \"../../features/06_response_train.parquet\",\n",
     "    engine=\"fastparquet\",  \n",
     "    index=False\n",
     ")"
