--- a/notebooks/eda_each_columns/07_bytes.ipynb
+++ b/notebooks/eda_each_columns/07_bytes.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_path = '../data/cleaned/data_cleaned.zip'\n",
-    "folder_extract = '../data/temp_extracted'\n",
+    "zip_path = '../../data/cleaned/data_cleaned.zip'\n",
+    "folder_extract = '../../data/temp_extracted'\n",
     "\n",
     "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
     "    zip_ref.extractall(folder_extract)"
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../data/temp_extracted/train.csv')\n",
-    "df_test = pd.read_csv('../data/temp_extracted/test.csv')"
+    "df_train = pd.read_csv('../../data/temp_extracted/train.csv')\n",
+    "df_test = pd.read_csv('../../data/temp_extracted/test.csv')"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "source": [
     "train_final=df_train_bytes[['index','bytes']]\n",
     "train_final.to_parquet(\n",
-    "    \"../features/07_bytes_train.parquet\",\n",
+    "    \"../../features/07_bytes_train.parquet\",\n",
     "    engine=\"fastparquet\",  \n",
     "    index=False\n",
     ")"
