--- a/notebooks/eda_each_columns/03_host.ipynb
+++ b/notebooks/eda_each_columns/03_host.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "188a8c08",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "63663180",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_path = '../data/cleaned/data_cleaned.zip'\n",
-    "folder_extract = '../data/temp_extracted'\n",
+    "zip_path = '../../data/cleaned/data_cleaned.zip'\n",
+    "folder_extract = '../../data/temp_extracted'\n",
     "\n",
     "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
     "    zip_ref.extractall(folder_extract)"
@@ -38,18 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "6f3b7471",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../data/temp_extracted/train.csv')\n",
-    "df_test = pd.read_csv('../data/temp_extracted/test.csv')"
+    "df_train = pd.read_csv('../../data/temp_extracted/train.csv')\n",
+    "df_test = pd.read_csv('../../data/temp_extracted/test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "911cd1dc",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "[2934930 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "29eb9da6",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "cf5e63a7",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "c13964ea",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "d9e7d695",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "[2934930 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "8766e7a1",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "[526644 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "35b92d16",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "992e3cf2",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "c8cf5adb",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "18d40ce5",
    "metadata": {},
    "outputs": [
@@ -890,7 +890,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "81f94d36",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
        "[63 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "c0b603b5",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
        "[2934930 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "cf770350",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1302,7 @@
        "[2934930 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "0f0d1585",
    "metadata": {},
    "outputs": [],
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "6d7a1c92",
    "metadata": {},
    "outputs": [],
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "11718935",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "3119fb78",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "4b630d7b",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "124eb62f",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "747f94a1",
    "metadata": {},
    "outputs": [],
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "eb6b0165",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1619,7 @@
        "[2934930 rows x 8 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,13 +1630,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "2ce04fdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train_visitors.to_parquet(\n",
-    "    \"../features/03_host_train.parquet\",\n",
+    "    \"../../features/03_host_train.parquet\",\n",
     "    engine=\"fastparquet\",\n",
     "    index=False\n",
     ")"
