--- a/notebooks/01_to_csv.ipynb
+++ b/notebooks/01_to_csv.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f2e83855",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
     "        m = pattern.search(line)\n",
     "        if m:\n",
     "            row = m.groupdict()\n",
-    "            row[\"bytes\"] = 0 if row[\"bytes\"] == \"-\" else int(row[\"bytes\"])\n",
+    "            row[\"bytes\"] = None if row[\"bytes\"] == \"-\" else int(row[\"bytes\"])\n",
     "            rows.append(row)\n",
     "\n",
     "    return pd.DataFrame(rows)"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "43dab0c7",
    "metadata": {},
    "outputs": [],
@@ -187,12 +187,12 @@
        "3    burger.letters.com  01/Jul/1995:00:00:11 -0400   \n",
        "4        199.120.110.21  01/Jul/1995:00:00:11 -0400   \n",
        "\n",
-       "                                             request response  bytes  \n",
-       "0                      GET /history/apollo/ HTTP/1.0      200   6245  \n",
-       "1                   GET /shuttle/countdown/ HTTP/1.0      200   3985  \n",
-       "2  GET /shuttle/missions/sts-73/mission-sts-73.ht...      200   4085  \n",
-       "3       GET /shuttle/countdown/liftoff.html HTTP/1.0      304      0  \n",
-       "4  GET /shuttle/missions/sts-73/sts-73-patch-smal...      200   4179  "
+       "                                             request response bytes  \n",
+       "0                      GET /history/apollo/ HTTP/1.0      200  6245  \n",
+       "1                   GET /shuttle/countdown/ HTTP/1.0      200  3985  \n",
+       "2  GET /shuttle/missions/sts-73/mission-sts-73.ht...      200  4085  \n",
+       "3       GET /shuttle/countdown/liftoff.html HTTP/1.0      304     0  \n",
+       "4  GET /shuttle/missions/sts-73/sts-73-patch-smal...      200  4179  "
       ]
      },
      "execution_count": 7,
@@ -206,7 +206,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "id": "a3491774",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "response\n",
+       "404    17028\n",
+       "302    11174\n",
+       "200      136\n",
+       "403      111\n",
+       "501       31\n",
+       "400       10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[train_df['bytes'].isnull()]['response'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "28701311",
    "metadata": {},
    "outputs": [
@@ -245,7 +273,7 @@
        "      <td>23/Aug/1995:00:00:00 -0400</td>\n",
        "      <td>GET /ksc.html HTTP/1.0</td>\n",
        "      <td>200</td>\n",
-       "      <td>7087</td>\n",
+       "      <td>7087.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -253,7 +281,7 @@
        "      <td>23/Aug/1995:00:00:05 -0400</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
        "      <td>200</td>\n",
-       "      <td>1292</td>\n",
+       "      <td>1292.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -261,7 +289,7 @@
        "      <td>23/Aug/1995:00:00:06 -0400</td>\n",
        "      <td>GET /images/ksclogo-medium.gif HTTP/1.0</td>\n",
        "      <td>200</td>\n",
-       "      <td>5866</td>\n",
+       "      <td>5866.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -269,7 +297,7 @@
        "      <td>23/Aug/1995:00:00:08 -0400</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
        "      <td>200</td>\n",
-       "      <td>1625</td>\n",
+       "      <td>1625.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -277,7 +305,7 @@
        "      <td>23/Aug/1995:00:00:10 -0400</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
        "      <td>404</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -291,15 +319,15 @@
        "3  internet-gw.watson.ibm.com  23/Aug/1995:00:00:08 -0400   \n",
        "4  internet-gw.watson.ibm.com  23/Aug/1995:00:00:10 -0400   \n",
        "\n",
-       "                                             request response  bytes  \n",
-       "0                             GET /ksc.html HTTP/1.0      200   7087  \n",
-       "1  GET /history/apollo/pad-abort-test-2/pad-abort...      200   1292  \n",
-       "2            GET /images/ksclogo-medium.gif HTTP/1.0      200   5866  \n",
-       "3  GET /history/apollo/pad-abort-test-2/pad-abort...      200   1625  \n",
-       "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404      0  "
+       "                                             request response   bytes  \n",
+       "0                             GET /ksc.html HTTP/1.0      200  7087.0  \n",
+       "1  GET /history/apollo/pad-abort-test-2/pad-abort...      200  1292.0  \n",
+       "2            GET /images/ksclogo-medium.gif HTTP/1.0      200  5866.0  \n",
+       "3  GET /history/apollo/pad-abort-test-2/pad-abort...      200  1625.0  \n",
+       "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "93ce5e10",
    "metadata": {},
    "outputs": [],
@@ -321,12 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "349e0459",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with zipfile.ZipFile(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/processed/data.zip\", \"w\", zipfile.ZIP_DEFLATED) as z:\n",
+    "with zipfile.ZipFile(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/processed/data_processed.zip\", \"w\", zipfile.ZIP_DEFLATED) as z:\n",
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/processed/train.csv\", arcname=\"train.csv\")\n",
     "    z.write(\"../../DATAFLOW_2026_UET.EPOCH_0_AUTOSCALING_ANALYSIS/data/processed/test.csv\", arcname=\"test.csv\")"
    ]
