--- a/notebooks/02_clean_data.ipynb
+++ b/notebooks/02_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "6c247a80",
    "metadata": {},
    "outputs": [],
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "67d88644",
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_raw_log = ['host', 'timestamp', 'request', 'response', 'bytes']\n",
-    "dtype_cols_raw_log = {'host': str, 'timestamp': 'datetime64[ns]', 'request': str, 'response': str, 'bytes': 'int64'}"
+    "dtype_cols_raw_log = {'host': str, 'timestamp': 'datetime64[ns]', 'request': str, 'response': str, 'bytes': 'Int64'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ccd86d1c",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
     "    df_logs['timestamp'] = pd.to_datetime(df_logs['timestamp'], format='%d/%b/%Y:%H:%M:%S', errors='coerce')\n",
     "    \n",
     "    # Xử lý cột bytes (fillna -1 và ép kiểu số)\n",
-    "    df_logs['bytes'] = pd.to_numeric(df_logs['bytes'], errors='coerce').fillna(-1)\n",
+    "    df_logs['bytes'] = pd.to_numeric(df_logs['bytes'], errors='coerce')\n",
     "    \n",
     "    # Ép kiểu theo dictionary bạn đã định nghĩa\n",
     "    df_logs = df_logs.astype(dtype_cols_raw_log)\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "41a14936",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "bb63f9b8",
    "metadata": {},
    "outputs": [
@@ -91,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đã xử lý xong: ../data/temp_extracted\\train.csv | Số dòng: 2934930\n",
-      "Đã xử lý xong: ../data/temp_extracted\\test.csv | Số dòng: 526644\n"
+      "Đã xử lý xong: ../data/temp_extracted/train.csv | Số dòng: 2934930\n",
+      "Đã xử lý xong: ../data/temp_extracted/test.csv | Số dòng: 526644\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "ddc26666",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "ee9391b6",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "[2934930 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "ecc6a801",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "      <td>1995-08-23 00:00:10</td>\n",
        "      <td>GET /history/apollo/pad-abort-test-2/pad-abort...</td>\n",
        "      <td>404</td>\n",
-       "      <td>0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,10 +392,10 @@
        "1  GET /history/apollo/pad-abort-test-2/pad-abort...      200   1292  \n",
        "2            GET /images/ksclogo-medium.gif HTTP/1.0      200   5866  \n",
        "3  GET /history/apollo/pad-abort-test-2/pad-abort...      200   1625  \n",
-       "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404      0  "
+       "4  GET /history/apollo/pad-abort-test-2/pad-abort...      404   <NA>  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "00e08eec",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "c773848c",
    "metadata": {},
    "outputs": [],
