fix : column bytes

--- a/notebooks/eda_each_columns/07_bytes.ipynb
+++ b/notebooks/eda_each_columns/07_bytes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "30e3740b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "4cbff51f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "4c14599e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "faf87cd6",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
     "\n",
     "    def clean_and_convert(self, df, col='bytes'):\n",
     "        df_bytes = df[['index', col]].copy()\n",
-    "        df_bytes[col] = pd.to_numeric(df_bytes[col], errors='coerce').fillna(0)\n",
+    "        df_bytes[col] = pd.to_numeric(df_bytes[col], errors='coerce')\n",
     "        df_bytes[col] = df_bytes[col] / 1000 # Sang KB\n",
     "        return df_bytes\n",
     "\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "6d780598",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "734a1fc0",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "[2934930 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "390793eb",
    "metadata": {},
    "outputs": [],
